Submitting the PA1-Updated4

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -32,7 +32,10 @@ daysum<-aggregate(steps ~ date, data=thedata, FUN=sum)
 
 #### Q2 Make a histogram of the total number of steps taken each day
 
+Below is a plot showing the total number of steps taken each day.
+
 ```{r Plot1, echo=TRUE}
+## Draws the plot
 library(ggplot2)
 plot1<-qplot(date, data=daysum, geom="bar", binwidth = 1,
       weight=steps, fill="red", main="Total Number of Steps by Date",
@@ -58,7 +61,9 @@ datamedian<-median(daysum$steps) ## Calculates the Median
 Here I'll calculate the mean of steps by interval and plot it.
 
 ```{r plot2, echo=TRUE}
-intervalmeans<-aggregate(steps ~ interval, data=thedata, FUN=mean) ## Calculating Mean of Steps by Interval
+## Calculating Mean of Steps by Interval
+intervalmeans<-aggregate(steps ~ interval, data=thedata, FUN=mean)
+## Draws the plot
 library(lattice)
 plot2<-xyplot (steps ~ interval, data=intervalmeans, type="l",
                main="Average Number of Steps Taken in 5-minute Intervals \nAveraged Across All Days",
@@ -72,8 +77,10 @@ print(plot2)
 To find out the 5 minute interval with the maximum number of steps on average across all days I'll use the below code.
 
 ```{r echo=TRUE}
-highestinterval<-intervalmeans[which.max(intervalmeans$steps),1] ## Gives the Interval with the highest Avg Number of Steps
-highestnumsteps<-intervalmeans[which.max(intervalmeans$steps),2] ## Gives the Highest Average Number of Steps in a 5-minute Interval
+## Gives the Interval with the highest Avg Number of Steps
+highestinterval<-intervalmeans[which.max(intervalmeans$steps),1]
+## Gives the Highest Average Number of Steps in a 5-minute Interval
+highestnumsteps<-intervalmeans[which.max(intervalmeans$steps),2]
 ```
 
 The interval with the maximum number of steps on average across all days was **`r highestinterval`** and the average number of steps in that interval was about **`r round(highestnumsteps,2)`**.
@@ -112,6 +119,7 @@ Let me start by drawing a histogram of the total number of steps taken each day 
 
 ```{r plot3, echo=TRUE}
 impdaysum<-aggregate(steps ~ date, data=imputeddata, FUN=sum) ## Calculating the sum of steps by date
+## Draws the plot
 plot3<-qplot(date, data=impdaysum, geom="bar", binwidth = 1,
       weight=steps, fill="red", main="Total Number of Steps by Date",
       xlab="Date", ylab = "Total Number os Steps")
@@ -142,7 +150,8 @@ Below I create a new variable and set it to weekday or weekend appropriately and
 
 ```{r echo=TRUE}
 imputeddata["daytype"] <- NA ## creating a new variable in the dataset
-for (i in 1:nrow(imputeddata)){ ## Going through the rows and setting the variable to weekday or weekend as per the date
+## Going through the rows and setting the variable to weekday or weekend as per the date
+for (i in 1:nrow(imputeddata)){
         if (weekdays(imputeddata[i,2])=="Saturday" || weekdays(imputeddata[i,2])=="Sunday"){
                 imputeddata[i,4]<-"weekend"
         }
@@ -156,7 +165,9 @@ imputeddata$daytype<-as.factor(imputeddata$daytype) ## Making daytype a factor a
 I will make the panel plot and see if there is anything interesting.
 
 ```{r plot4, echo=TRUE}
-impintervalmeans<-aggregate(steps ~ interval + daytype, data=imputeddata, FUN=mean) ## Calculating the mean of steps by interval and day type
+## Calculating the mean of steps by interval and day type
+impintervalmeans<-aggregate(steps ~ interval + daytype, data=imputeddata, FUN=mean) 
+## Draws the plot
 plot4<-xyplot (steps ~ interval | daytype, data=impintervalmeans, type="l", layout=c(1,2),
         main="Average Number of Steps Taken in 5-minute Intervals \nAveraged Across All Days by Day Type",
         xlab="Interval", ylab="Number of Steps")
