--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -157,9 +157,12 @@ plot4<-xyplot (steps ~ interval | daytype, data=impintervalmeans, type="l", layo
 print(plot4)
 ```
 
+I have seen differences in activity patterns between weekdays and weekends and below is a list of my observations.
+
 **Observations:**
 
-- Notice how on weekdays the number of steps appear to start increasing earlier in the day compared to weekend days.  
-- Also notice how on weekdays there appears to be a large peak of number of steps between the intervals 750 and 1000. It is quite higher than the same interval on weekend days.  
-- Additionally, see how between intervals 1000 and 1750 there seems to be more average steps on weekends compared to weekdays.
-- Moreover, towards the end of the day, the average number of steps seems to start their gradual final decrease at a later interval of the day during weekends compared to weekdays.
+- On weekdays the number of steps appear to start increasing earlier in the day compared to weekend days.  
+- On weekdays there appears to be a large peak in the number of steps between the intervals 750 and 1000. It is quite higher than the same interval on weekend days.  
+- Between intervals 1000 and 1750 there seems to be higher averages of steps on weekends compared to weekdays.
+- Towards the end of the day, the averages of the number of steps at the weekend spike at around interval 2000 and then start 
+their gradual final decline while on weekdays, the spike happens at an earlier interval of the day and then start their gradual final decline.
