--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -28,12 +28,12 @@ First, I'll calculate the total number of steps taken per day
 daysum<-aggregate(steps ~ date, data=thedata, FUN=sum)
 ```
 
-Then, I'll make a plot showing the total number of steps taken each day.
+Then, I'll plot a histogram showing the total number of steps taken each day.
 
 ```{r Plot1, echo=TRUE}
 ## Draws the plot
 library(ggplot2)
-plot1<-qplot(date, data=daysum, geom="bar", binwidth = 1,
+plot1<-qplot(date, data=daysum, geom="histogram", binwidth = 1,
       weight=steps, fill="red", main="Total Number of Steps by Date",
       xlab="Date", ylab = "Total Number os Steps")
 plot1<-plot1+theme(legend.position = "none")
@@ -103,7 +103,7 @@ Now, I'll plot a histogram of the total number of steps taken each day after imp
 ```{r plot3, echo=TRUE}
 impdaysum<-aggregate(steps ~ date, data=imputeddata, FUN=sum) ## Calculating the sum of steps by date
 ## Draws the plot
-plot3<-qplot(date, data=impdaysum, geom="bar", binwidth = 1,
+plot3<-qplot(date, data=impdaysum, geom="histogram", binwidth = 1,
       weight=steps, fill="red", main="Total Number of Steps by Date",
       xlab="Date", ylab = "Total Number os Steps")
 plot3<-plot3+theme(legend.position = "none")
